--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ECDSA_CTFs_Related/lib/forge-std"]
 	path = ECDSA_CTFs_Related/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "ECDSA_CTFs_Related/lib/openzeppelin-contracts"]
+	path = ECDSA_CTFs_Related/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
